last fix on images sources

--- a/certificaciones.html
+++ b/certificaciones.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="aws">
-            <a href="index.html"><img src="images/logoaws2.png" alt=""></a>
+            <a href="index.html"><img src="https://bucket-juan.s3.amazonaws.com/images/logoaws2.png" alt=""></a>
             <div class="logo" >Serivces.</div>
         </div>
         
@@ -41,27 +41,27 @@
     
     <!-- Primera fila -->
     <div class="row">
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-cloud-practitioner/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certitication-cloudpractitioner.png" alt="Certification Cloud Practitioner"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-cloud-practitioner/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certitication-cloudpractitioner.png" alt="Certification Cloud Practitioner"></a></div>
     </div>
     <!-- Segunda fila -->
     <div class="row">
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-solutions-architect-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certification-solutions-azul.png" alt="Certification Solutions Azul"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-developer-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certification-developer.png" alt="Certification Developer"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-sysops-admin-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certification-sysops-administrator.png" alt="Certification SysOps Administrator"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-solutions-architect-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-solutions-azul.png" alt="Certification Solutions Azul"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-developer-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-developer.png" alt="Certification Developer"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-sysops-admin-associate/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-sysops-administrator.png" alt="Certification SysOps Administrator"></a></div>
     </div>
     <!-- Tercera fila -->
     <div class="row">
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-solutions-architect-professional/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certification-solutions.png" alt="Certification Solutions"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-devops-engineer-professional/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certification-devops.png" alt="Certification DevOps"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-solutions-architect-professional/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-solutions.png" alt="Certification Solutions"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-devops-engineer-professional/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-devops.png" alt="Certification DevOps"></a></div>
     </div>
     <!-- Cuarta fila -->
     <div class="row">
-        <div class="item"><a href="https://aws.amazon.com/blogs/training-and-certification/category/sap/" target="_blank"><img src="img/certifcate-sap-on-aws.png" alt="Certificate SAP on AWS"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-advanced-networking-specialty/?ch=sec&sec=rmg&d=1" target="_blank"><img src="img/certificate-advancer-networking.png" alt="Certificate Advanced Networking"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/training/classroom/exam-readiness-aws-certified-database-specialty/" target="_blank"><img src="img/certificate-database.png" alt="Certificate Database"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-machine-learning-specialty/" target="_blank"><img src="img/certificate-machine-learning.png" alt="Certificate Machine Learning"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-security-specialty/" target="_blank"><img src="img/certification-security.png" alt="Certification Security"></a></div>
-        <div class="item"><a href="https://aws.amazon.com/training/learn-about/data-analytics/" target="_blank"><img src="img/certification-data-analytics.png" alt="Certification Data Analytics"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/blogs/training-and-certification/category/sap/" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certifcate-sap-on-aws.png" alt="Certificate SAP on AWS"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-advanced-networking-specialty/?ch=sec&sec=rmg&d=1" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certificate-advancer-networking.png" alt="Certificate Advanced Networking"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/training/classroom/exam-readiness-aws-certified-database-specialty/" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certificate-database.png" alt="Certificate Database"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-machine-learning-specialty/" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certificate-machine-learning.png" alt="Certificate Machine Learning"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/es/certification/certified-security-specialty/" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-security.png" alt="Certification Security"></a></div>
+        <div class="item"><a href="https://aws.amazon.com/training/learn-about/data-analytics/" target="_blank"><img src="https://bucket-juan.s3.amazonaws.com/img/certification-data-analytics.png" alt="Certification Data Analytics"></a></div>
     </div>
 </div>
 <br>
