--- a/tutoriales.html
+++ b/tutoriales.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="aws">
-            <a href="index.html"><img src="images/logoaws2.png" alt=""></a>
+            <a href="index.html"><img src="https://bucket-juan.s3.amazonaws.com/images/logoaws2.png" alt=""></a>
             <div class="logo" >Serivces.</div>
         </div>
         
