fix on turoiales description

--- a/tutoriales.html
+++ b/tutoriales.html
@@ -147,13 +147,13 @@
                 <div class="divider-tuto"></div>
                 <div class="tutorial-info">
                     <h2>AWS Cloud Adoption Framework (CAF)</h2>
-                    <p>Tutorial completo sobre Amazon Athena, aprende sobre el servicio de Athena, y como utilizarlo.</p>
+                    <p>AWS Cloud Adoption Framework (CAF), es un marco de trabajo que guía a las organizaciones en su transformación hacia la nube.</p>
                 </div>
             </div>
             <div class="tutorial even">
                 <div class="tutorial-info">
                     <h2>AWS Well Architected Framework (WAF)</h2>
-                    <p>Conceptos básicos de Amazon/AWS S3 (Simple Storage Service) | Tutorial de S3, Creación de un depósito | AWS para principiantes</p>
+                    <p>AWS Well-Architected Framework, este video explica los cinco pilares fundamentales para crear infraestructuras de alta calidad en la nube usando AWS.</p>
                 </div>
                 <div class="divider-tuto"></div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/jvVY1FDWgkA?si=mqjxjmPQEMJepL8f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
