--- a/tutoriales.html
+++ b/tutoriales.html
@@ -165,7 +165,7 @@
         <div class="footerContainer">
             <div class="socialIcons">
                 <a href="https://www.facebook.com/profile.php?id=100088579052568" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/juan_sansberro_18?igsh=cnhubThnYXI4eTV4 " target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/detodofut_tw" target="_blank"><i class="fa-solid fa-x"></i></a>
                 <a href="https://www.linkedin.com/in/juan-manuel-sansberro-pereyra-a50a1329a/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
